@@ -145,6 +145,7 @@ Chronological list of authors
   - Ameya Harmalkar
   - Shakul Pathak
   - Andrea Rizzi
+  - Darsh Mishra
 
 External code
 -------------
